@@ -5,13 +5,12 @@ end
 
 class ValidationsTest < ActiveRecord::TestCase
   
-  # So far ODBC does not allow UTF-8 chars in queries.
-  COERCED_TESTS = [:test_validate_uniqueness_with_limit_and_utf8] if connection_mode_odbc?
+  COERCED_TESTS = [:test_validate_uniqueness_with_limit_and_utf8]
   
   include SqlserverCoercedTest
   
   def test_coerced_test_validate_uniqueness_with_limit_and_utf8
-    assert true
+    true
   end
   
   
